02-orquestacion/ejercicio-3/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lc-todo.edu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-front
                port:
                  number: 80
